<resources>
    <!--    <string name="app_name">FinalYearProject-Android</string>-->
    <string name="app_name">AI Based Activity Monitoring</string>
    <string name="new_user_text">New User Details</string>
    <string name="defaultEmailText">Your Email ID Here</string>
    <string name="defaultNameText">Enter Your Name</string>
    <string name="defaultPhoneText">Enter Your Phone Number</string>
    <string name="fill_below_details">Fill Below Details</string>
    <string name="defaultResetText">Reset</string>
    <string name="defaultSignUpText">Sign UP</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_in_with_email_and_password">Sign In With Email and Password</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="register_here">Register Here.</string>
    <string name="google_icon">Google Icon</string>
    <string name="image_view">Image View</string>
    <string name="edit_image">Edit Image</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_your_height_default_70_0"><![CDATA[Enter Your Height(Default -> 70.0)]]></string>
    <string name="enter_your_weight">Enter Your Weight</string>
    <string name="google_key">726445186162-ihoh4l1vgru2ahjebhh3u3269u21drte.apps.googleusercontent.com</string>
    <string name="default_height">70.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_to_speak">Continue to speak.</string>
    <string name="input_message_click_mic">Input message / click mic</string>
    <string name="reset_text">RESET</string>
    <string name="submit_text">SUBMIT</string>
    <string name="food_name_goes_here">Food Name Goes Here</string>
    <string name="food_calories_goes_here">Food Calories Goes Here</string>
    <string name="add_button">ADD Button</string>
    <string name="timing_text">Timing</string>
    <string name="delete_icon_text">DELETE ICON</string>
    <string name="login">Login</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="other_options">Other Options</string>
</resources>