<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_only_button"
    android:layout_margin="2dp"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/recycler_diet_right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/diet_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/food_name_goes_here" />

        <TextView
            android:id="@+id/diet_food_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/food_calories_goes_here" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recycler_diet_right"
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/diet_food_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timing_text"
            android:textColor="@android:color/holo_red_light"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/delete_current_food_item"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_delete_outline_24"
            android:contentDescription="@string/delete_icon_text" />

    </LinearLayout>

</RelativeLayout>